# ros-pickplace-to-slam-nav

./: .gitignore  README.md  nav.rviz  pick_operation.py
src/franka_ros/franka_example_controllers/scripts/: pick_operation.py
src/franka_ros/franka_gazebo/models/table/: model.sdf
src/panda_moveit_config/: package.xml
src/panda_moveit_config/launch/: demo_final.launch  demo_gazebo.launch
src/slam_pkg/: CMakeLists.txt  package.xml
src/slam_pkg/launch/: combined_maze.launch  launch_go.launch  launch_go2.launch  path.launch  path2.launch
src/slam_pkg/src/: driver_controller.cpp
src/slam_pkg/src/nav/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/slam_pkg/urdf/: explorer_bot.urdf
